criado teste do endpoint findAll do UserResource